# protobufs/rest.pb.gw.go
@@ -87,15 +87,15 @@ func request_RestService_UpdateThing_0(ctx context.Context, marshaler runtime.Ma
 		_   = err
 	)
 
-	val, ok = pathParams["thing.id"]
+	val, ok = pathParams["thing.thingID"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "thing.id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "thing.thingID")
 	}
 
-	err = runtime.PopulateFieldFromPath(&protoReq, "thing.id", val)
+	err = runtime.PopulateFieldFromPath(&protoReq, "thing.thingID", val)
 
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "thing.id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "thing.thingID", err)
 	}
 
 	msg, err := client.UpdateThing(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -298,7 +298,7 @@ var (
 
 	pattern_RestService_CreateThing_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "Thing"}, ""))
 
-	pattern_RestService_UpdateThing_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "Thing", "thing.id"}, ""))
+	pattern_RestService_UpdateThing_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "Thing", "thing.thingID"}, ""))
 
 	pattern_RestService_DeleteThing_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "Thing", "thingID"}, ""))
 )
